<package>
  <name>example_msgs</name>
  <version>1.0.0</version>
  <description>Example messages</description>

  <maintainer email="laurent.gauthier@soccasys.com">Laurent Gauthier</maintainer>
  <license>MIT</license>
  <url type="website">http://soccasys.com</url>
  <author email="laurent.gauthier@soccasys.com">Laurent Gauthier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
