<?xml version="1.0"?>
<package format="2">
  <name>service</name>
  <version>1.0.0</version>
  <description>The service package</description>

  <maintainer email="laurent.gauthier@soccasys.com">Laurent Gauthier</maintainer>
  <license>MIT</license>
  <url type="website">http://soccasys.com/</url>
  <author email="laurent.gauthier@soccasys.com">Laurent Gauthier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>example_srvs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>example_srvs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>example_srvs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
